[package]
name = "utils"
version = "0.1.0"
authors = ["Daniel Sockwell <daniel@codesections.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = "0.6.0"
clap = { git = "https://github.com/clap-rs/clap" }
atty = "0.2.14"
dirs = "2.0.2"
